--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.162.0",
-    "simplex-noise": "^4.0.1"
+    "peerjs": "^1.5.5",
+    "simplex-noise": "^4.0.1",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/three": "^0.162.0",
