--- a/public/data/levels/manifest.json
+++ b/public/data/levels/manifest.json
@@ -3,6 +3,7 @@
     "id": "mission1",
     "name": "Valley Patrol",
     "description": "Engage enemy fighters and ground forces in the valley.",
+    "biome": "plains",
     "missionFile": "/missions/mission1.json",
     "unlocked": true,
     "order": 0
@@ -10,7 +11,8 @@
   {
     "id": "mission2",
     "name": "Mountain Assault",
-    "description": "Strike enemy positions in the mountains.",
+    "description": "Strike enemy positions in the mountains. Heavy AA presence.",
+    "biome": "mountains",
     "missionFile": "/missions/mission2.json",
     "unlocked": false,
     "requiredScore": 1000,
@@ -20,6 +22,7 @@
     "id": "mission3",
     "name": "Coastal Defense",
     "description": "Defend the coastline from incoming air and naval threats.",
+    "biome": "ocean",
     "missionFile": "/missions/mission3.json",
     "unlocked": false,
     "requiredScore": 3000,
