--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
+    "dev:api": "node api/dev-server.mjs",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.162.0",
+    "@vercel/node": "^5.6.7",
     "typescript": "^5.3.3",
     "vite": "^5.1.0"
   }
