--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --port 3000",
     "dev:api": "node api/dev-server.mjs",
+    "dev:all": "node api/dev-server.mjs & vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
